draws basic 2d and 3d vector diagrams

--- a/includes/includes.tex
+++ b/includes/includes.tex
@@ -1,4 +1,11 @@
-\usepackage{tikz}
 \usepackage{amsmath}
 \usepackage{amsbsy}
 \usepackage{mathrsfs}
+\usepackage[demo]{graphicx}
+\usepackage{caption}
+\usepackage{float}
+\usepackage{subfig}
+
+\usepackage{tikz}
+\usepackage{tikz-3dplot}
+\usetikzlibrary{calc}
