completes section of dot product, adds black colored hyperlinks to the table of contents

--- a/includes/includes.tex
+++ b/includes/includes.tex
@@ -6,6 +6,15 @@
 \usepackage{float}
 \usepackage{subfig}
 
+\usepackage{hyperref}
+\hypersetup{
+    colorlinks,
+    citecolor=black,
+    filecolor=black,
+    linkcolor=black,
+    urlcolor=black
+}
+
 \usepackage{tikz}
 \usepackage{tikz-3dplot}
 \usetikzlibrary{calc}
