writes the unit vector transformation from RCS to CCS

--- a/includes/includes.tex
+++ b/includes/includes.tex
@@ -5,7 +5,7 @@
 \usepackage{caption}
 \usepackage{float}
 \usepackage{subfig}
-
+\usepackage[parfill]{parskip}
 \usepackage{hyperref}
 \hypersetup{
     colorlinks,
